포트폴리오

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>태현's 포트폴리오</title>
 </head>
+<style>
+  .box {
+    width: 860px;
+    margin: 0 auto;
+  }
+
+  .box video {
+    width: 100%;
+    height: 500px;
+  }
+</style>
 
 <body>
-
+  <div class="box">
+    <video autoplay muted src="./이디야스토어 - Chrome 2023-06-08 17-33-50.mp4"></video>
+  </div>
 </body>
 
 </html>
