포트폴리오

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>태현's 포트폴리오</title>
+  <link rel="stylesheet" href="./CSS/main.css">
 </head>
 <style>
   .box {
@@ -20,8 +21,18 @@
 </style>
 
 <body>
+  <div class="wrap">
+    <header class="header">
+      <ul>
+        <li>1</li>
+      </ul>
+    </header>
+    <section class="intro">
+
+    </section>
+  </div>
   <div class="box">
-    <video autoplay muted loop src="./이디야.mp4"></video>
+    <!-- <video autoplay muted loop src="./이디야.mp4"></video> -->
   </div>
 </body>
 
