--- a/index.html
+++ b/index.html
@@ -5,35 +5,64 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>태현's 포트폴리오</title>
+  <title>프론트엔드 개발자 권태현의 포트폴리오입니다.</title>
   <link rel="stylesheet" href="./CSS/main.css">
-</head>
-<style>
-  .box {
-    width: 860px;
-    margin: 0 auto;
-  }
 
-  .box video {
-    width: 100%;
-    height: 500px;
-  }
-</style>
+  <!-- google font -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@600;700&display=swap"
+    rel="stylesheet">
+</head>
 
 <body>
   <div class="wrap">
+    <!--------- header ----------->
     <header class="header">
       <ul>
-        <li>1</li>
+        <li><a href="#!">Intro</a></li>
+        <li><a href="#!">Profile</a></li>
+        <li><a href="#!">Skill</a></li>
+        <li><a href="#!">Project</a></li>
+        <li><a href="#!">Contact</a></li>
       </ul>
     </header>
-    <section class="intro">
 
+    <!--------- intro ---------->
+    <section class="intro">
+      <div class="container">
+        <div class="intro_box">
+          <p>
+            <span class="let">let</span> FrontEnd_Developer {
+          </p>
+
+          <p>
+            <span class="int_color">name </span>: "Kwon Tae Hyun" ,
+          </p>
+
+          <p>
+            <span class="int_color">age </span>: 26살 ,
+          </p>
+
+          <p>
+            <span class="int_color">skills </span>: { "HTML5", "CSS3", "SCSS", "JavaScript",
+          </p>
+          
+          <p>
+            "jQuery", "React" }
+          </p>
+
+          <p>}</p>
+        </div>
+      </div>
     </section>
+
+
+    <div class="box">
+      <!-- <video autoplay muted loop src="./이디야.mp4"></video> -->
+    </div>
   </div>
-  <div class="box">
-    <!-- <video autoplay muted loop src="./이디야.mp4"></video> -->
-  </div>
+
+
 </body>
 
 </html>
