포트폴리오

--- a/index.html
+++ b/index.html
@@ -31,27 +31,16 @@
     <section class="intro">
       <div class="container">
         <div class="intro_box">
-          <p>
-            <span class="let">let</span> FrontEnd_Developer {
-          </p>
+          <span>안녕하세요.</span>
+          <span>
+            소통과 개발을 좋아하는
+            <span class="under">권태현</span>입니다.
+          </span>
 
-          <p>
-            <span class="int_color">name </span>: "Kwon Tae Hyun" ,
-          </p>
-
-          <p>
-            <span class="int_color">age </span>: 26살 ,
-          </p>
-
-          <p>
-            <span class="int_color">skills </span>: { "HTML5", "CSS3", "SCSS", "JavaScript",
-          </p>
-          
-          <p>
-            "jQuery", "React" }
-          </p>
-
-          <p>}</p>
+          <div class="typing">
+            <span>저는 </span>
+            <span class="text"></span>
+          </div>
         </div>
       </div>
     </section>
