포트폴리오

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>프론트엔드 개발자 권태현의 포트폴리오입니다.</title>
   <link rel="stylesheet" href="./CSS/main.css">
 
+  <script src="./JS/main.js" defer></script>
   <!-- google font -->
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@600;700&display=swap"
@@ -40,6 +41,7 @@
           <div class="typing">
             <span>저는 </span>
             <span class="text"></span>
+            <span> 개발자입니다.</span>
           </div>
         </div>
       </div>
