포트폴리오

--- a/index.html
+++ b/index.html
@@ -119,7 +119,19 @@
           </div>
 
           <div class="education">
-            1
+            <ul class="history">
+              <li>
+                <p class="tit">이력</p>
+                <p>2017. 03 ~ 2023. 02 대구가톨릭대학교 컴퓨터공학전공(3.75/4.5)</p>
+                <p>2018. 04 ~ 2020. 12 수도기계화보병사단 병장 만기전역</p>
+                <p>2022 .06 ~ 2022 .07 큐텍코리아 앱개발 인턴 (1개월)</p>
+                <p>2022. 12 ~ 2023. 07 부산 그린컴퓨터아카데미 국비과정수료</p>
+              </li>
+            </ul>
+
+            <ul class="certificate">
+
+            </ul>
           </div>
         </div>
       </div>
