--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
 
               <li>
                 <p class="tit">Gitgub</p>
-                <p><a href="https://github.com/Tae-Hyun98" target="_blank">https://github.com/Tae-Hyun98
-                  </a></p>
+                <p>
+                  <a href="https://github.com/Tae-Hyun98" target="_blank">https://github.com/Tae-Hyun98
+                  </a>
+                </p>
               </li>
             </ul>
           </div>
@@ -122,18 +124,82 @@
             <ul class="history">
               <li>
                 <p class="tit">이력</p>
-                <p>2017. 03 ~ 2023. 02 대구가톨릭대학교 컴퓨터공학전공(3.75/4.5)</p>
-                <p>2018. 04 ~ 2020. 12 수도기계화보병사단 병장 만기전역</p>
-                <p>2022 .06 ~ 2022 .07 큐텍코리아 앱개발 인턴 (1개월)</p>
-                <p>2022. 12 ~ 2023. 07 부산 그린컴퓨터아카데미 국비과정수료</p>
+
+                <p>
+                  2017. 03 ~ 2023. 02
+                  <br />
+                  대구가톨릭대학교 컴퓨터공학전공(3.75/4.5)
+                </p>
+
+                <p>
+                  2018. 04 ~ 2020. 12
+                  <br />
+                  수도기계화보병사단 병장 만기전역
+                </p>
+
+                <p>
+                  2022 .06 ~ 2022 .07
+                  <br />
+                  큐텍코리아 앱개발 인턴 (1개월)
+                </p>
+
+                <p>
+                  2022. 12 ~ 2023. 07
+                  <br />
+                  부산 그린컴퓨터아카데미 국비과정수료
+                </p>
               </li>
             </ul>
 
             <ul class="certificate">
+              <li>
+                <p class="tit">자격증</p>
 
+                <p>
+                  2023. 06 정보처리기사 취득
+                </p>
+
+                <p>
+                  2018. 03 컴퓨터활용능력 1급 취득
+                </p>
+
+                <p>
+                  2016. 12 운전면허 2종보통 취득
+                </p>
+              </li>
             </ul>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="skill">
+      <h1>Skills</h1>
+
+      <div class="skill_box">
+        <div class="skill_left">
+          <div>
+            <p>HTML5</p>
+            <p class="percent">0%</p>
+          </div>
+
+          <div>
+            <p>CSS3/SCSS</p>
+            <p class="percent">0</p>
+          </div>
+
+          <div>
+            <p>jQuery</p>
+            <p class="percent">0</p>
+          </div>
+
+          <div>
+            <p>JavaScript</p>
+            <p class="percent">0</p>
+          </div>
+        </div>
+
+        <div class="skill_right"></div>
       </div>
     </section>
 
