포트폴리오

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <section class="wrap">
+  <div class="wrap">
     <!--------- header ----------->
     <header class="header">
       <ul>
@@ -178,35 +178,43 @@
 
       <div class="skill_box">
         <div class="skill_left">
-          <div>
-            <p>HTML5</p>
-            <p class="percent">0%</p>
-          </div>
+          <ul>
+            <li>
+              <p>HTML5</p>
+              <p class="percent"></p>
+            </li>
 
-          <div>
-            <p>CSS3/SCSS</p>
-            <p class="percent">0</p>
-          </div>
+            <li>
+              <p>CSS3/SCSS</p>
+              <p class="percent"></p>
+            </li>
 
-          <div>
-            <p>jQuery</p>
-            <p class="percent">0</p>
-          </div>
+            <li>
+              <p>jQuery</p>
+              <p class="percent"></p>
+            </li>
 
-          <div>
-            <p>JavaScript</p>
-            <p class="percent">0</p>
-          </div>
+            <li>
+              <p>JavaScript</p>
+              <p class="percent"></p>
+            </li>
+
+            <li>
+              <p>React</p>
+              <p class="percent"></p>
+            </li>
+          </ul>
+
         </div>
 
-        <div class="skill_right"></div>
+        <div class="skill_right">
+          123
+        </div>
       </div>
     </section>
 
-    <div class="box">
-      <!-- <video autoplay muted loop src="./이디야.mp4"></video> -->
-    </div>
-    </div>
+
+  </div>
 
 
 </body>
