--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       </div>
     </section>
 
+    <div class="container">
 
-    <section id="profile">
-      <div class="container">
+      <section id="profile">
         <h1>Profile</h1>
 
         <div class="row">
@@ -170,49 +170,120 @@
             </ul>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="skill">
-      <h1>Skills</h1>
+      <section id="skill">
+        <h1>Skills</h1>
 
-      <div class="skill_box">
-        <div class="skill_left">
-          <ul>
-            <li>
-              <p>HTML5</p>
-              <p class="percent"></p>
-            </li>
+        <div class="skill_box">
+          <div class="skill_left">
+            <ul>
+              <li>
+                <p>HTML5</p>
+                <p class="percent"></p>
+              </li>
 
-            <li>
-              <p>CSS3/SCSS</p>
-              <p class="percent"></p>
-            </li>
+              <li>
+                <p>CSS3/SCSS</p>
+                <p class="percent"></p>
+              </li>
 
-            <li>
-              <p>jQuery</p>
-              <p class="percent"></p>
-            </li>
+              <li>
+                <p>jQuery</p>
+                <p class="percent"></p>
+              </li>
 
-            <li>
-              <p>JavaScript</p>
-              <p class="percent"></p>
-            </li>
+              <li>
+                <p>JavaScript</p>
+                <p class="percent"></p>
+              </li>
 
-            <li>
-              <p>React</p>
-              <p class="percent"></p>
-            </li>
-          </ul>
+              <li>
+                <p>React</p>
+                <p class="percent"></p>
+              </li>
+            </ul>
+
+          </div>
+
+          <div class="skill_right">
+            <div>
+              <div class="skill_header">
+                <img src="./images/html.PNG" alt="HTML5">
+                <p>HTML5</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  웹 접근성, 표준성을 준수하고 시멘틱태그의 의미를 파악하고 사용할 수 있으며, 효율적인 마크업을 할수 있습니다.
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/css3.png" alt="CSS3">
+                <p>CSS3/SCSS</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  CSS/SCSS 문법을 사용하여 다양한 스타일과 애니메이션을 구현할 수 있고,
+                  미디어쿼리를 사용하여 각 해상도별 반응형 웹을 만들 수 있습니다.
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/jQuery.png" alt="jQuery">
+                <p>jQuery</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  jQuery 문법을 숙지하고 있고, 애니메이션과 기본 메소드들을 활용할 수 있습니다.
+                  jQuery 관련 라이브러리를 사용할 수 있습니다.
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/js.png" alt="JavaScript">
+                <p>JavaScript</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  ES6+문법을 이해하고 DOM에 동적으로 노드를 추가 및 삭제시킬 수 있으며,
+                  자주사용되거나 재사용이 필요한 함수를 따로구현할 수 있도록 노력하고 있습니다.
+                  sort, filter 함수를 이용하여 정렬을 할 수 있습니다. 로그인 및 회원가입에서 입력된 값의 유효성검사를 if문으로 작성할 수 있습니다
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/react.png" alt="react">
+                <p>React</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>s</p>
+              </div>
+            </div>
+          </div>
 
         </div>
+      </section>
 
-        <div class="skill_right">
-          123
-        </div>
-      </div>
-    </section>
-
+    </div>
 
   </div>
 
