포트폴리오

--- a/index.html
+++ b/index.html
@@ -278,6 +278,21 @@
                 <p>s</p>
               </div>
             </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/github-removebg-preview.png" alt="react">
+                <p>Git/Github</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  git의 add, commit, push, pull 등 기본명령어들을 사용할 수 있고, 
+                  github를 통해 레포지토리를 관리할 수 있습니다.
+                </p>
+              </div>
+            </div>
           </div>
 
         </div>
