포트폴리오

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>프론트엔드 개발자 권태현의 포트폴리오입니다.</title>
   <link rel="stylesheet" href="./CSS/main.css">
 
-  <script src="./JS/main.js" defer></script>
   <!-- google font -->
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@600;700&display=swap"
@@ -16,6 +15,13 @@
 
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
+
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+  <script src="./JS/main.js" defer></script>
+
 </head>
 
 <body>
@@ -288,7 +294,7 @@
 
               <div class="skill_text">
                 <p>
-                  git의 add, commit, push, pull 등 기본명령어들을 사용할 수 있고, 
+                  git의 add, commit, push, pull 등 기본명령어들을 사용할 수 있고,
                   github를 통해 레포지토리를 관리할 수 있습니다.
                 </p>
               </div>
@@ -296,6 +302,11 @@
           </div>
 
         </div>
+      </section>
+
+      <section id="project">
+        <h1>Project</h1>
+
       </section>
 
     </div>
