포트폴리오

--- a/index.html
+++ b/index.html
@@ -307,6 +307,45 @@
       <section id="project">
         <h1>Project</h1>
 
+        <div class="swiper project-Swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="prject_box">
+                <div class="project_img">
+                  <img src="./images/ediya.gif" alt="ediya">
+                </div>
+
+                <div class="description">
+                  <p>
+                    이디야스토어
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="prject_box">
+                <div class="project_img">
+                  <img src="./images/Fila.gif" alt="ediya">
+                </div>
+
+                <div class="description">
+                  <p>
+                    FILA
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">Slided</div>
+            <div class="swiper-slide">Slide 3</div>
+          </div>
+          <div class="swiper-pagination"></div>
+
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+
+        </div>
       </section>
 
     </div>
