--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p>
                   2018. 04 ~ 2020. 12
                   <br />
-                  수도기계화보병사단 병장 만기전역
+                  육군 수도기계화보병사단 전역
                 </p>
 
                 <p>
@@ -348,6 +348,38 @@
         </div>
       </section>
 
+      <section id="contact">
+        <div class="contact_box">
+
+          <h1>Contact</h1>
+          <ul>
+            <li>
+              <img src="./images/person-fill.svg" alt="">
+              <p><span>Name :</span> 권태현</p>
+            </li>
+
+            <li>
+              <img src="./images/telephone-fill.svg" alt="">
+              <p><span>Phone :</span> 010 -1111 -2222</p>
+            </li>
+
+            <li>
+              <img src="./images/envelope-fill.svg" alt="">
+              <p><span>Email :</span> kt9811@naver.com</p>
+            </li>
+
+            <li>
+              <img src="./images/github.svg" alt="">
+              <a href="https://github.com/Tae-Hyun98" target="_blank"><span>Github :</span>
+                https://github.com/Tae-Hyun98</a>
+            </li>
+
+            <li>
+              <p>소중한 연락 기다리겠습니다.</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
 
   </div>
