포트폴리오

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/css3.png" alt="CSS3">
+                <img src="./images/css.png" alt="CSS3">
                 <p>CSS3/SCSS</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -287,7 +287,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/github-removebg-preview.png" alt="react">
+                <img src="./images/github.png" alt="github">
                 <p>Git/Github</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -312,7 +312,8 @@
             <div class="swiper-slide">
               <div class="prject_box">
                 <div class="project_img">
-                  <img src="./images/ediya.gif" alt="ediya">
+                  <img src="./images/mockup_desktop.png" alt="">
+                  <p><img src="./images/ediya.gif" alt=""></p>
                 </div>
 
                 <div class="description">
@@ -337,7 +338,19 @@
               </div>
             </div>
 
-            <div class="swiper-slide">Slided</div>
+            <div class="swiper-slide">
+              <div class="prject_box">
+                <div class="project_img">
+                  1
+                </div>
+
+                <div class="description">
+                  <p>
+                    FILA
+                  </p>
+                </div>
+              </div>
+            </div>
             <div class="swiper-slide">Slide 3</div>
           </div>
           <div class="swiper-pagination"></div>
@@ -347,40 +360,40 @@
 
         </div>
       </section>
-
-      <section id="contact">
-        <div class="contact_box">
-
-          <h1>Contact</h1>
-          <ul>
-            <li>
-              <img src="./images/person-fill.svg" alt="">
-              <p><span>Name :</span> 권태현</p>
-            </li>
-
-            <li>
-              <img src="./images/telephone-fill.svg" alt="">
-              <p><span>Phone :</span> 010 -1111 -2222</p>
-            </li>
-
-            <li>
-              <img src="./images/envelope-fill.svg" alt="">
-              <p><span>Email :</span> kt9811@naver.com</p>
-            </li>
-
-            <li>
-              <img src="./images/github.svg" alt="">
-              <a href="https://github.com/Tae-Hyun98" target="_blank"><span>Github :</span>
-                https://github.com/Tae-Hyun98</a>
-            </li>
-
-            <li>
-              <p>소중한 연락 기다리겠습니다.</p>
-            </li>
-          </ul>
-        </div>
-      </section>
     </div>
+
+    <section id="contact">
+      <div class="contact_box">
+
+        <h1>Contact</h1>
+        <ul>
+          <li>
+            <img src="./images/person-fill.svg" alt="">
+            <p><span>Name :</span> 권태현</p>
+          </li>
+
+          <li>
+            <img src="./images/telephone-fill.svg" alt="">
+            <p><span>Phone :</span> 010 -1111 -2222</p>
+          </li>
+
+          <li>
+            <img src="./images/envelope-fill.svg" alt="">
+            <p><span>Email :</span> kt9811@naver.com</p>
+          </li>
+
+          <li>
+            <img src="./images/github.svg" alt="">
+            <a href="https://github.com/Tae-Hyun98" target="_blank"><span>Github :</span>
+              https://github.com/Tae-Hyun98</a>
+          </li>
+
+          <li>
+            <p>소중한 연락 기다리겠습니다.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </div>
 
