포트폴리오

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
     <!--------- intro ---------->
     <section id="intro">
+      <div class="intro_img">
+      <img src="./images/moon.b09759b9.png" alt="">
+    </div>
       <div class="container">
         <div class="intro_box">
           <span>안녕하세요.</span>
@@ -56,19 +59,9 @@
           </div>
 
           <div class="down">
-            <div class="scroll_text">
-              <span>s</span>
-              <span>c</span>
-              <span>r</span>
-              <span>o</span>
-              <span>l</span>
-              <span>l</span>
-            </div>
-
-            <span class="down_icon">
+            <span class="scroll"></span>
               <i class="fas fa-chevron-down"></i>
               <i class="fas fa-chevron-down"></i>
-            </span>
           </div>
         </div>
       </div>
@@ -87,37 +80,37 @@
           <div class="about_me">
             <ul>
               <li>
-                <p class="tit">이름</p>
+                <p class="tit">이름 :</p>
                 <p>권태현</p>
               </li>
 
               <li>
-                <p class="tit">생년월일</p>
+                <p class="tit">생년월일 :</p>
                 <p>1998 / 11 / 09</p>
               </li>
 
               <li>
-                <p class="tit">나이</p>
+                <p class="tit">나이 :</p>
                 <p>26세</p>
               </li>
 
               <li>
-                <p class="tit">주소</p>
+                <p class="tit">주소 :</p>
                 <p>서울특별시 강남</p>
               </li>
 
               <li>
-                <p class="tit">휴대폰</p>
+                <p class="tit">휴대폰 :</p>
                 <p>010 - 1111 - 1111</p>
               </li>
 
               <li>
-                <p class="tit">E-mail</p>
+                <p class="tit">E-mail :</p>
                 <p>kt9811@naver.com</p>
               </li>
 
               <li>
-                <p class="tit">Gitgub</p>
+                <p class="tit">Github :</p>
                 <p>
                   <a href="https://github.com/Tae-Hyun98" target="_blank">https://github.com/Tae-Hyun98
                   </a>
