포트폴리오

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     <!--------- intro ---------->
     <section id="intro">
       <div class="intro_img">
-      <img src="./images/moon.b09759b9.png" alt="">
-    </div>
+        <img src="./images/moon.png" alt="moon">
+      </div>
+      
       <div class="container">
         <div class="intro_box">
           <span>안녕하세요.</span>
@@ -60,8 +61,8 @@
 
           <div class="down">
             <span class="scroll"></span>
-              <i class="fas fa-chevron-down"></i>
-              <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-chevron-down"></i>
           </div>
         </div>
       </div>
