포트폴리오

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="intro_img">
         <img src="./images/moon.png" alt="moon">
       </div>
-      
+
       <div class="container">
         <div class="intro_box">
           <span>안녕하세요.</span>
@@ -209,7 +209,7 @@
           <div class="skill_right">
             <div>
               <div class="skill_header">
-                <img src="./images/html.PNG" alt="HTML5">
+                <img src="./images/html_icon.png" alt="HTML5">
                 <p>HTML5</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -223,7 +223,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/css.png" alt="CSS3">
+                <img src="./images/css_icon.png" alt="CSS3">
                 <p>CSS3/SCSS</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -238,7 +238,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/jQuery.png" alt="jQuery">
+                <img src="./images/jQuery_icon.png" alt="jQuery">
                 <p>jQuery</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -253,7 +253,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/js.png" alt="JavaScript">
+                <img src="./images/JavaScript_icon.png" alt="JavaScript">
                 <p>JavaScript</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -269,7 +269,7 @@
 
             <div>
               <div class="skill_header">
-                <img src="./images/react.png" alt="react">
+                <img src="./images/React_icon.png" alt="react">
                 <p>React</p>
                 <i class="fas fa-chevron-down"></i>
               </div>
