포트폴리오

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="./JS/main.js" defer></script>
+
 
 </head>
 
@@ -177,6 +179,7 @@
 
         <div class="skill_box">
           <div class="skill_left">
+            <h2>Language</h2>
             <ul>
               <li>
                 <p>HTML5</p>
@@ -200,6 +203,29 @@
 
               <li>
                 <p>React</p>
+                <p class="percent"></p>
+              </li>
+
+              <li>
+                <p>Java</p>
+                <p class="percent"></p>
+              </li>
+            </ul>
+
+            <h2>Tools</h2>
+            <ul>
+              <li>
+                <p>Vscode</p>
+                <p class="percent"></p>
+              </li>
+
+              <li>
+                <p>Android Stdio</p>
+                <p class="percent"></p>
+              </li>
+
+              <li>
+                <p>eclipse</p>
                 <p class="percent"></p>
               </li>
             </ul>
@@ -276,6 +302,20 @@
 
               <div class="skill_text">
                 <p>s</p>
+              </div>
+            </div>
+
+            <div>
+              <div class="skill_header">
+                <img src="./images/java_icon.png" alt="JavaScript">
+                <p>Java</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+
+              <div class="skill_text">
+                <p>
+                  자바의 기본 문법을 이해하고 있으며,
+                </p>
               </div>
             </div>
 
@@ -390,7 +430,6 @@
     </section>
 
   </div>
-
 
 </body>
 
