--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>프론트엔드 개발자 권태현의 포트폴리오입니다.</title>
-  <link rel="stylesheet" href="./CSS/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <!-- google font -->
   <link
