--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="./JS/main.js" defer></script>
 
-
+  <!-- gsap -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
 </head>
 
 <body>
   <div class="wrap">
     <!--------- header ----------->
-    <header class="header scr_top">
+    <header class="header">
       <ul>
         <li><a href="#!" class="on" value="intro">Intro</a></li>
         <li><a href="#!">Profile</a></li>
