포트폴리오

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>프론트엔드 개발자 권태현의 포트폴리오입니다.</title>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <link rel="stylesheet" href="./css/main.css">
 
   <!-- google font -->
@@ -20,7 +21,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+
   <script src="./JS/main.js" defer></script>
 
   <!-- gsap -->
@@ -52,11 +53,10 @@
       </div>
 
       <div class="intro_box">
-        <span>안녕하세요.</span>
-        <span>
+        <p class="fade">안녕하세요. <br />
           소통과 개발을 좋아하는
           <span class="under">권태현</span>입니다.
-        </span>
+        </p>
 
         <hr class="bar">
 
@@ -392,7 +392,7 @@
 
             <li class="swiper-slide">Slide 3</li>
           </ul>
-          
+
           <div class="swiper-pagination"></div>
 
           <div class="swiper-button-prev"></div>
