--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <!-- gsap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -183,56 +184,69 @@
 
         <div class="skill_box">
           <div class="skill_left">
-            <h2>Language</h2>
-            <ul>
-              <li>
-                <p>HTML5</p>
-                <p class="percent"></p>
-              </li>
+            <div class="language">
+              <h2>Language</h2>
+              <ul>
+                <li>
+                  <img src="./images/html_icon.png" alt="html">
+                  <p>HTML5</p>
+                  <p class="percent">100</p>
+                </li>
 
-              <li>
-                <p>CSS3/SCSS</p>
-                <p class="percent"></p>
-              </li>
+                <li>
+                  <img src="./images/css_icon.png" alt="css">
+                  <p>CSS3</p>
+                  <p class="percent">100</p>
+                </li>
 
-              <li>
-                <p>jQuery</p>
-                <p class="percent"></p>
-              </li>
+                <li>
+                  <img src="./images/Sass_icon.png" alt="scss">
+                  <p>SCSS</p>
+                  <p class="percent">100</p>
+                </li>
 
-              <li>
-                <p>JavaScript</p>
-                <p class="percent"></p>
-              </li>
+                <li>
+                  <img src="./images/jQuery_icon.png" alt="jquery">
+                  <p>jQuery</p>
+                  <p class="percent">90</p>
+                </li>
 
-              <li>
-                <p>React</p>
-                <p class="percent"></p>
-              </li>
+                <li>
+                  <img src="./images/JavaScript_icon.png" alt="JavaScript">
+                  <p>JavaScript</p>
+                  <p class="percent">90</p>
+                </li>
 
-              <li>
-                <p>Java</p>
-                <p class="percent"></p>
-              </li>
-            </ul>
+                <li>
+                  <img src="./images/React_icon.png" alt="react">
+                  <p>React</p>
+                  <p class="percent">70</p>
+                </li>
 
-            <h2>Tools</h2>
-            <ul>
-              <li>
-                <p>Vscode</p>
-                <p class="percent"></p>
-              </li>
+                <li>
+                  <img src="./images/java_icon.png" alt="Java">
+                  <p>Java</p>
+                  <p class="percent">50</p>
+                </li>
 
-              <li>
-                <p>Android Stdio</p>
-                <p class="percent"></p>
-              </li>
 
-              <li>
-                <p>eclipse</p>
-                <p class="percent"></p>
-              </li>
-            </ul>
+              </ul>
+            </div>
+
+            <div class="tools">
+              <h2>Tools</h2>
+              <ul>
+                <li>
+                  <img src="./images/vscode.png" alt="vscode">
+                  <p>Vscode</p>
+                </li>
+
+                <li>
+                  <img src="./images/android_icon.png" alt="Android">
+                  <p>Android Studio</p>
+                </li>
+              </ul>
+            </div>
 
           </div>
 
