포트폴리오

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
               <li class="swiper-slide">
                 <div class="prject_box">
                   <div class="project_img">
-                    1
+                    <img src="./images/codemonkey.jpg" alt="">
                   </div>
 
                   <div class="description">
@@ -410,13 +410,25 @@
                 </div>
               </li>
 
-              <li class="swiper-slide">Slide 3</li>
+              <li class="swiper-slide">
+                <div class="prject_box">
+                  <div class="project_img">
+                    <img src="./images/codemonkey.jpg" alt="">
+                  </div>
+
+                  <div class="description">
+                    <p>
+                      FILA
+                    </p>
+                  </div>
+                </div>
+              </li>
             </ul>
 
             <div class="swiper-pagination"></div>
 
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev button"></div>
+            <div class="swiper-button-next button"></div>
 
           </div>
         </div>
