--- a/index.html
+++ b/index.html
@@ -371,13 +371,47 @@
 
                 <div class="prject_box">
                   <div class="project_img">
-                    <img src="./images/귀여운거.png" alt="">
+                    <img src="./images/fila_img.JPG" alt="">
                   </div>
 
                   <div class="description">
-                    <p>
-                      이디야스토어
-                    </p>
+                    <div class="desc_text">
+                      <h2>FILA</h2>
+                      <p>
+                        FILA 사이트를 참고하여 사용자의 UX에 중점을 두고 리뉴얼한 프로젝트입니다. (적응형웹)
+                      </p>
+
+                      <h3>작업</h3>
+                      <p>팀 : 기획서 / 프로토타입 / 디자인시안
+                        <br />
+                        개인 : 퍼블리싱 100%, 기능구현 100%
+                      </p>
+
+                      <h3>개발 기간</h3>
+                      <p>2023.04.28 ~ 2023.5.~</p>
+
+                      <h3>구성 페이지</h3>
+                      <p>메인페이지, 서브페이지(상품목록), 디테일페이지(상품상세정보 및 리뷰/문의), 로그인/회원가입페이지</p>
+
+                      <h3>주요 기능</h3>
+                      <p>필터기능, 상품검색기능, 리뷰/문의 기능, 로그인/회원가입 유효성체크 기능 <p>
+
+                          <h3>사용한 skill</h3>
+                          <p class="use_skill">
+                            <img src="./images/html_icon.png" alt="">
+                            <img src="./images/css_icon.png" alt="">
+                            <img src="./images/jQuery_icon.png" alt="">
+                            <img src="./images/JavaScript_icon.png" alt="">
+                            <img src="./images/vscode.png" alt="">
+                            <img src="./images/github.png" alt="">
+                          </p>
+                    </div>
+
+                    <div class="go">
+                     <a href="https://github.com/Tae-Hyun98/FILA-project#readme" target="_blank">코드보기</a>
+                     <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">구경</a>
+                     <a href="#!">기획서보기</a>
+                    </div>
                   </div>
                 </div>
               </li>
