--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                       <h3>개발 기간</h3>
                       <p>2023.04.28 ~ 2023.5.~</p>
 
-                      <h3>구성 페이지</h3>
+                      <h3>페이지 구성</h3>
                       <p>메인페이지, 서브페이지(상품목록), 디테일페이지(상품상세정보 및 리뷰/문의), 로그인/회원가입페이지</p>
 
                       <h3>주요 기능</h3>
@@ -409,7 +409,7 @@
 
                     <div class="go">
                      <a href="https://github.com/Tae-Hyun98/FILA-project#readme" target="_blank">코드보기</a>
-                     <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">구경</a>
+                     <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">Demo 구경</a>
                      <a href="#!">기획서보기</a>
                     </div>
                   </div>
