--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
                     <div class="go">
                      <a href="https://github.com/Tae-Hyun98/FILA-project#readme" target="_blank">코드보기</a>
-                     <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">Demo 구경</a>
+                     <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">Demo 보기</a>
                      <a href="#!">기획서보기</a>
                     </div>
                   </div>
