포트폴리오

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <li class="swiper-slide">
                 <div class="prject_box">
                   <div class="project_img">
-                    <img src="./images/Fila.gif" alt="ediya">
+                    <img src="./images/ediya_img.png" alt="ediya">
                   </div>
 
                   <div class="description">
