포트폴리오

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
           <h1>Skills</h1>
 
           <div class="skill_box">
+
             <div class="skill_left">
               <div class="language">
-                <h2>Language</h2>
                 <ul>
                   <li>
                     <img src="./images/html_icon.png" alt="html">
@@ -228,17 +228,14 @@
                   </li>
 
                   <li>
-                    <img src="./images/java_icon.png" alt="Java">
+                    <img src="./images/portfolio_ Icon/java.png" alt="Java">
                     <p>Java</p>
                     <p class="percent">50</p>
                   </li>
-
-
                 </ul>
               </div>
 
               <div class="tools">
-                <h2>Tools</h2>
                 <ul>
                   <li>
                     <img src="./images/vscode.png" alt="vscode">
@@ -388,23 +385,13 @@
                       </p>
 
                       <h3>개발 기간</h3>
-                      <p>2023.04.28 ~ 2023.5.~</p>
+                      <p>2023.04.28 ~ 2023.5.24</p>
 
                       <h3>페이지 구성</h3>
-                      <p>메인페이지, 서브페이지(상품목록), 디테일페이지(상품상세정보 및 리뷰/문의), 로그인/회원가입페이지</p>
+                      <p>메인페이지, 서브페이지(상품목록), 디테일페이지(상품상세정보 및 리뷰/문의), 로그인/회원가입페이지, 검색결과페이지</p>
 
                       <h3>주요 기능</h3>
-                      <p>필터기능, 상품검색기능, 리뷰/문의 기능, 로그인/회원가입 유효성체크 기능 <p>
-
-                          <h3>사용한 skill</h3>
-                          <p class="use_skill">
-                            <img src="./images/html_icon.png" alt="">
-                            <img src="./images/css_icon.png" alt="">
-                            <img src="./images/jQuery_icon.png" alt="">
-                            <img src="./images/JavaScript_icon.png" alt="">
-                            <img src="./images/vscode.png" alt="">
-                            <img src="./images/github.png" alt="">
-                          </p>
+                      <p>필터기능, 상품검색기능, 리뷰/문의 기능, 로그인/회원가입 유효성체크 기능 </p>
                     </div>
 
                     <div class="go">
@@ -415,6 +402,38 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="desc_skill">
+
+                  <h3>사용한 STACK</h3>
+                  <ul class="use_skill">
+                    <li>
+                      <img src="./images/portfolio_ Icon/html5.png " alt="">
+                      HTML5
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/css3.png" alt="">
+                      CSS3
+                    </li>
+
+                    <li>
+                      <img src="./images/jQuery_icon.png" alt="">
+                      jQuery
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/javascript.png" alt="">
+                      JavaScript
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/es6.png" alt="">
+                      ES6+
+                    </li>
+                  </ul>
+                </div>
+
               </li>
 
               <li class="swiper-slide">
@@ -459,8 +478,6 @@
                 </div>
               </li>
             </ul>
-
-            <div class="swiper-pagination"></div>
 
             <div class="swiper-button-prev button"></div>
             <div class="swiper-button-next button"></div>
