포트폴리오

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
 
-                <div class="prject_box">
+                <div class="project_box">
                   <div class="project_img">
                     <img src="./images/fila_img.JPG" alt="">
                   </div>
@@ -437,7 +437,7 @@
               </li>
 
               <li class="swiper-slide">
-                <div class="prject_box">
+                <div class="project_box">
                   <div class="project_img">
                     <img src="./images/ediya_img.png" alt="ediya">
                   </div>
@@ -451,7 +451,7 @@
               </li>
 
               <li class="swiper-slide">
-                <div class="prject_box">
+                <div class="project_box">
                   <div class="project_img">
                     <img src="./images/codemonkey.jpg" alt="">
                   </div>
@@ -465,7 +465,7 @@
               </li>
 
               <li class="swiper-slide">
-                <div class="prject_box">
+                <div class="project_box">
                   <div class="project_img">
                     <img src="./images/codemonkey.jpg" alt="">
                   </div>
