--- a/index.html
+++ b/index.html
@@ -451,17 +451,70 @@
               </li>
 
               <li class="swiper-slide">
+
                 <div class="project_box">
                   <div class="project_img">
-                    <img src="./images/codemonkey.jpg" alt="">
+                    <img src="./images/portfolio_tum.png" alt="">
                   </div>
 
                   <div class="description">
-                    <p>
-                      FILA
-                    </p>
+                    <div class="desc_text">
+                      <h2>포트폴리오</h2>
+                      <p>
+                        포트폴리오 사이트입니다.
+                      </p>
+
+                      <h3>작업</h3>
+                      <p>개인작업 100%</p>
+
+                      <h3>개발 기간</h3>
+                      <p>2023.04.28 ~ 2023.5.24</p>
+
+                      <h3>페이지 구성</h3>
+                      <p>메인페이지</p>
+
+                      <h3>주요 기능</h3>
+                      <p>필터기능, 상품검색기능, 리뷰/문의 기능, 로그인/회원가입 유효성체크 기능 </p>
+                    </div>
+
+                    <div class="go">
+                      <a href="https://github.com/Tae-Hyun98/FILA-project#readme" target="_blank">상세보기</a>
+                      <a href="https://portfolio-taehyun.netlify.app/" target="_blank">Demo보기</a>
+                    </div>
                   </div>
                 </div>
+
+                <div class="desc_skill">
+
+                  <h3>사용한 STACK</h3>
+                  <ul class="use_skill">
+                    <li>
+                      <img src="./images/portfolio_ Icon/html5.png " alt="">
+                      HTML5
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/sass.png" alt="">
+                      SCSS
+                    </li>
+
+                    <li>
+                      <img src="./images/jQuery_icon.png" alt="">
+                      jQuery
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/javascript.png" alt="">
+                      JavaScript
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/es6.png" alt="">
+                      ES6+
+                    </li>
+                  </ul>
+                </div>
+
               </li>
 
               <li class="swiper-slide">
