포트폴리오

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!--------- header ----------->
     <header class="header">
       <h1>Taehyun's Portfolio</h1>
+      <p>menubar</p>
       <nav>
         <div class="navigation">
           <a href="#!">Intro</a>
