포트폴리오

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!--------- header ----------->
     <header class="header">
       <h1>Taehyun's Portfolio</h1>
-      <p>menubar</p>
-      <nav>
+      <i class="fas fa-bars menubar"></i>
+      <nav id="nav">
         <div class="navigation">
           <a href="#!">Intro</a>
           <a href="#!">Profile</a>
