--- a/index.html
+++ b/index.html
@@ -432,6 +432,87 @@
                       <img src="./images/portfolio_ Icon/es6.png" alt="">
                       ES6+
                     </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/swiper.png" alt="">
+                      Swiper.js
+                    </li>
+
+                  </ul>
+                </div>
+
+              </li>
+
+              <li class="swiper-slide">
+
+                <div class="project_box">
+                  <div class="project_img">
+                    <img src="./images/캡처12.jpg" alt="">
+                  </div>
+
+                  <div class="description">
+                    <div class="desc_text">
+                      <h2>베스킨라빈스 키오스크</h2>
+                      <p>
+                        베스킨라빈스를 참고하여 키오스크로 제작한 React 프로젝트입니다.
+                      </p>
+
+                      <h3>작업</h3>
+                      <p>
+                        개인 : 퍼블리싱 100%, 기능구현 100%
+                      </p>
+
+                      <h3>개발 기간</h3>
+                      <p>2023.06.21 ~ 2023.06.30</p>
+
+                      <h3>페이지 구성</h3>
+                      <p>메인페이지, 서브페이지, 디테일페이지, 장바구니페이지</p>
+
+                      <h3>주요 기능</h3>
+                      <p>라우터를 이용한 페이지전환기능, redux toolkit 전역관리기능, useState를 이용한 상태관리기능 </p>
+                    </div>
+
+                    <div class="go">
+                      <a href=https://github.com/Tae-Hyun98/kiosk#readme target="_blank">상세보기</a>
+                      <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">Demo보기</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="desc_skill">
+
+                  <h3>사용한 STACK</h3>
+                  <ul class="use_skill">
+                    <li>
+                      <img src="./images/portfolio_ Icon/react.png " alt="react">
+                      React.js
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/redux.png" alt="redux">
+                      Redux
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon//styled_components.png" alt="styled-components">
+                      styled-components
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/css3.png" alt="css">
+                      CSS3
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/es6.png" alt="es6">
+                      ES6+
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon//framer-motion.png" alt="framer-motion">
+                      Framer Motion
+                    </li>
+
                   </ul>
                 </div>
 
