포트폴리오

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
                 <div class="skill_text">
                   <p>
-                    jQuery 문법을 숙지하고 있고, 애니메이션과 기본 메소드들을 활용할 수 있습니다.
+                    jQuery 문법을 숙지하고 있고, 화면제어를 위한 애니메이션과 기본 메소드들을 활용할 수 있습니다.
                     jQuery 관련 라이브러리를 사용할 수 있습니다.
                   </p>
                 </div>
@@ -321,7 +321,9 @@
                 </div>
 
                 <div class="skill_text">
-                  <p>s</p>
+                  <p>React사용을 위한 기본세팅을 할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br/>
+                  전역적인 상태관리를 위해 redux toolkit을 사용할 수 있으며, 상태관리를 위한 useState를 사용할 수 있습니다.
+                  </p>
                 </div>
               </div>
 
