--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 </div>
 
                 <div class="skill_text">
-                  <p>React사용을 위한 기본세팅을 할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br/>
+                  <p>React프레임워크를 사용하여 Route를 이용하여 SPA를 구현할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br/>
                   전역적인 상태관리를 위해 redux toolkit을 사용할 수 있으며, 상태관리를 위한 useState를 사용할 수 있습니다.
                   </p>
                 </div>
