--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
                     <div class="go">
                       <a href=https://github.com/Tae-Hyun98/kiosk#readme target="_blank">상세보기</a>
-                      <a href="https://tae-hyun98.github.io/FILA-project/" target="_blank">Demo보기</a>
+                      <a href="https://tae-hyun98.github.io/kiosk/" target="_blank">Demo보기</a>
                     </div>
                   </div>
                 </div>
