포트폴리오

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
       <section id="project">
         <div class="container">
-          <h1>Project</h1>
+          <h1>Project <span>*사이트들은 상업적 목적이 아닌 포트폴리오 목적으로 제작되었습니다.</span></h1>
 
           <div class="swiper project-Swiper">
             <ul class="swiper-wrapper">
@@ -654,6 +654,10 @@
         </div>
       </section>
     </main>
+
+    <div class="copyright">
+      © 2023. Kwon Tae Hyun. All rights reserved.
+    </div>
 
 
     <!-- TOP버튼 -->
