포트폴리오

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                 </div>
 
                 <div class="skill_text">
-                  <p>React프레임워크를 사용하여 Route를 이용하여 SPA를 구현할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br/>
-                  전역적인 상태관리를 위해 redux toolkit을 사용할 수 있으며, 상태관리를 위한 useState를 사용할 수 있습니다.
+                  <p>React프레임워크를 사용하여 Route를 이용하여 SPA를 구현할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br />
+                    전역적인 상태관리를 위해 redux toolkit을 사용할 수 있으며, 상태관리를 위한 useState를 사용할 수 있습니다.
                   </p>
                 </div>
               </div>
@@ -513,6 +513,76 @@
                     <li>
                       <img src="./images/portfolio_ Icon//framer-motion.png" alt="framer-motion">
                       Framer Motion
+                    </li>
+
+                  </ul>
+                </div>
+
+              </li>
+
+              <li class="swiper-slide">
+
+                <div class="project_box">
+                  <div class="project_img">
+                    <img src="./images/genesis.png" alt="genesis_site">
+                  </div>
+
+                  <div class="description">
+                    <div class="desc_text">
+                      <h2>Genesis 프로모션</h2>
+                      <p>
+                        제네시스사이트를 프로모션으로 제작하였습니다.
+                      </p>
+
+                      <h3>작업</h3>
+                      <p>
+                        개인 : 퍼블리싱 100%, 기능구현 100%
+                      </p>
+
+                      <h3>개발 기간</h3>
+                      <p>2023.07.03 ~ 2023.07.06</p>
+
+                      <h3>페이지 구성</h3>
+                      <p>인트로페이지, 메인페이지</p>
+
+                      <h3>주요 기능</h3>
+                      <p>라우터를 이용한 페이지전환기능, redux toolkit 전역관리기능, useState를 이용한 상태관리기능 </p>
+                    </div>
+
+                    <div class="go">
+                      <a href=https://github.com/Tae-Hyun98/kiosk#readme target="_blank">상세보기</a>
+                      <a href="https://tae-hyun98.github.io/kiosk/" target="_blank">Demo보기</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="desc_skill">
+
+                  <h3>사용한 STACK</h3>
+                  <ul class="use_skill">
+                    <li>
+                      <img src="./images/portfolio_ Icon/html5.png " alt="html">
+                      HTML5
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/sass.png" alt="sass">
+                      SASS
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/javascript.png" alt="javascript">
+                      JavaScript
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/jquery.png" alt="framer-motion">
+                      jQuery
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon//framer-motion.png" alt="framer-motion">
+                      gsap
                     </li>
 
                   </ul>
