--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
                     </li>
 
                     <li>
-                      <img src="./images/portfolio_ Icon//framer-motion.png" alt="framer-motion">
-                      gsap
+                      <img src="./images/portfolio_ Icon/gsap.png" alt="gsap">
+                      GSAP
                     </li>
 
                   </ul>
