포트폴리오

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                       <p>인트로페이지, 메인페이지</p>
 
                       <h3>주요 기능</h3>
-                      <p>라우터를 이용한 페이지전환기능, redux toolkit 전역관리기능, useState를 이용한 상태관리기능 </p>
+                      <p>gsap을 이용한 애니메이션</p>
                     </div>
 
                     <div class="go">
