--- a/index.html
+++ b/index.html
@@ -550,8 +550,8 @@
                     </div>
 
                     <div class="go">
-                      <a href=https://github.com/Tae-Hyun98/kiosk#readme target="_blank">상세보기</a>
-                      <a href="https://tae-hyun98.github.io/kiosk/" target="_blank">Demo보기</a>
+                      <a href='#!' target="_blank">상세보기</a>
+                      <a href="https://tae-hyun98.github.io/genesis/" target="_blank">Demo보기</a>
                     </div>
                   </div>
                 </div>
