포트폴리오

--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
           <h1>Profile</h1>
 
           <div class="row">
-            <div class="profile_img">
-              <img src="./images/profile_img.jpg" alt="profile_img">
+            <div class="my_introduce">
+              <div class="profile_img">
+                <img src="./images/profile_img.jpg" alt="profile_img">
+              </div>
+              <div class="desc">한줄</div>
             </div>
 
             <div class="about_me">
