포트폴리오

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
               <div class="profile_img">
                 <img src="./images/profile_img.jpg" alt="profile_img">
               </div>
-              <div class="desc">한줄</div>
+              <div class="desc">
+                모든일에 최선을 다하며, 꿈과 열정이 가득한 프론트엔드 개발자입니다. 
+              </div>
             </div>
 
             <div class="about_me">
